--- a/TimeZone/Views/Admin/AddProduct.cshtml
+++ b/TimeZone/Views/Admin/AddProduct.cshtml
@@ -42,6 +42,13 @@
             <label for="Price">Price:</label>
             <input type="number" id="Price" name="Price" min="0.01" step="0.01" required>
 
+            <label for="IsPopularNow">Is Popular Now</label>
+            <select id="IsPopularNow" name="IsPopularNow" required>
+                <option value="true">Yes</option>
+                <option value="false">No</option>
+            </select>
+
+
             <label for="image">Image:</label>
             <input type="file" id="Img" name="Img" accept="Img/*" required>
 
