--- a/TimeZone/Views/Home/Index.cshtml
+++ b/TimeZone/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@model List<Product>;
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -21,8 +20,8 @@
         
         <div class="header-nav">
             <nav>
-                <a href="#">Home</a>
-                <a href="#">Shop</a>
+                <a href="/Home">Home</a>
+                <a href="/Shop">Shop</a>
                 <a href="#">About</a>
                 <a href="#">Contact</a>
             </nav>
@@ -121,7 +120,7 @@
 
     </div>
 
-    <div class="watchofchoice" style="margin-top:70px">
+    <div class="watchofchoice" style="margin-top:42px">
         <div class="text" style="margin-right:70px;">
             <h1>Watch Of Choice</h1>
             <span>Unveil timeless elegance with our watch of choice collection, where precision meets style. Elevate your moments with meticulously crafted timepieces that blend sophistication and functionality effortlessly.</span>
@@ -131,6 +130,86 @@
 
     </div>
 
+    <div class="features">
+        <div class="bar">
+
+            <div class="item">
+                <i class="fa-solid fa-box"></i>
+                <h3>Free Shipping Method</h3>
+                <span>aorem ixpsacdolor sit ameasecur adipisicing elitsf edasd.</span>
+            </div>
+
+            <div class="item">
+                <i class="fa-solid fa-lock"></i>
+                <h3>Secure Shipping Method</h3>
+                <span>aorem ixpsacdolor sit ameasecur adipisicing elitsf edasd.</span>
+            </div>
+
+            <div class="item">
+                <i class="fa-solid fa-shield-halved"></i>
+                <h3>Secure Payment System</h3>
+                <span>aorem ixpsacdolor sit ameasecur adipisicing elitsf edasd.</span>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="part">
+        <img  src="/Images/Home/timezone.png"/>
+            <span>Asorem ipsum adipolor sdit amet, consectetur adipisicing elitcf sed do eiusmod tem.</span>
+        </div>
+        
+        <div class="part">
+            <h4>Quick Links</h4>
+            
+            <nav>
+                <a href="#">About</a>
+                <a href="#">Offers & Discounts</a>
+                <a href="#">Get Coupon</a>
+                <a href="#">Contact Us</a>
+            </nav>
+        </div>
+
+        <div class="part">
+            <h4>New Products</h4>
+
+            <nav>
+                <a href="#">About</a>
+                <a href="#">Offers & Discounts</a>
+                <a href="#">Get Coupon</a>
+                <a href="#">Contact Us</a>
+            </nav>
+        </div>
+
+        <div class="part">
+            <h4>Support</h4>
+
+            <nav>
+                <a href="#">Frequently Asked Questions</a>
+                <a href="#">Offers & Discounts</a>
+                <a href="#">Terms & Conditions</a>
+                <a href="#">Privacy Policy</a>
+            </nav>
+        </div>
+    </div>
+
+    <div class="last">
+        <div class="text">
+        <p>&copy; 2024 Your Company Name. All rights reserved.</p>
+        </div>
+
+        <div class="icon">
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+        </div>
+    </div>
+
+    <!-- Floating icon -->
+    <div class="floating-icon" id="scrollToTopBtn">
+        <img src="/Images/Home/scroll-to-top.png" alt="Scroll to Top">
+    </div>
     <script src="~/js/site.js"></script>
 </body>
 </html>
